[gd_scene load_steps=2 format=2]

[ext_resource path="res://levels/HUD/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
modulate = Color( 0.054902, 0.396078, 0.835294, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 76.0
margin_right = 64.0
margin_bottom = 96.0
text = "THIS IS A BUTTON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_window" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 214.0
margin_right = 242.0
margin_bottom = 331.0
text = "THIS IS MY TEXT WINDOW"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_level_number" type="Label" parent="."]
margin_left = 781.0
margin_top = 3.0
margin_right = 998.0
margin_bottom = 17.0
text = "Level Number: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_level_name" type="Label" parent="."]
margin_left = 781.0
margin_top = 19.0
margin_right = 996.0
margin_bottom = 33.0
text = "Level Name: "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
